added and translated faq and our services

--- a/src/i18n/languages/en/home.json
+++ b/src/i18n/languages/en/home.json
@@ -5,6 +5,7 @@
     "bookButton": "Book a Session"
   },
   "services": {
+    "eyebrow": "My Services",
     "title": "What I Offer",
     "subtitle": "Tailored coaching sessions to help you excel in your tech journey",
     "coaching": {
